--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/serve": "^7.7.1",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
